# icfpc-2024

./: .env.example  .gitignore  Dockerfile.server  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.yml  install_macos.sh  lambdaman.ipynb  main.py  pyproject.toml  repl.py  seed.cpp  z3.ipynb
ide/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
ide/cli/: build.gradle.kts
ide/core/: build.gradle.kts
ide/gradle/: libs.versions.toml
ide/ui/: build.gradle.kts
language/: downloader.py  gen.py  interpreter.py  parser.py  repl.py  tester.py  uploader.py
logs/leaderboard/: 1719726593.json  1719726685.json  1719726879.json  1719727065.json  1719738846.json  1719739452.json  1719740348.json  1719740880.json  1719741390.json  1719745862.json  1719758089.json  1719760765.json  1719761371.json  1719761977.json  1719762583.json  1719763189.json  1719763795.json  1719763859.json  1719763948.json  1719764554.json  1719765160.json  1719766115.json  1719767107.json  1719767899.json  1719770895.json  (+97 more)
pages/: get 3d  get 3d-example  get efficiency  get index  get lambdaman  get spaceship
problems/: lambdaman10_decoded.txt  lambdaman6_decoded.txt  lambdaman9_decoded.txt  spaceship22_decoded.txt
scripts/: check_leaderboard.py  monitor_leaderboard.py  monitor_leaderboard.sh  slack_integration.py
server/: debugger.py  server.py  utils.py
tools/: gen_svg.py  gen_svg_cs.py  gen_svg_line.py  points_to_svgline.py  spaceship_to_tsp.py  spaceship_tsp_tour_to_line.py
ui/: .gitignore  Makefile  index.html  package.json  pnpm-lock.yaml  vite.config.docker.ts
(+589 files in other folders)
